--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,4 +13,11 @@ eureka:
   client:
     service-url:
       defaultZone: http://127.0.0.1:8761/eureka/
-
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+  endpoint:
+    health:
+      show-details: always
